--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                         
                         <div class="wishes-section">
                             <p class="wishes">
-                                Chúc bạn luôn xinh đẹp, dịu dàng<br>
-                                Mạnh mẽ và thành công trong cuộc sống<br>
-                                Tươi trẻ như hoa, rạng rỡ như nắng mai<br>
-                                Mãi mãi hạnh phúc và tràn đầy yêu thương
+                                Chúc bạn luôn xinh đẹp, dịu dàng.<br>
+                                Mạnh mẽ và thành công trong cuộc sống.<br>
+                                Tươi trẻ như hoa, rạng rỡ như nắng mai.<br>
+                                Mãi mãi hạnh phúc và tràn đầy yêu thương.
                             </p>
                         </div>
                         
